[gd_scene load_steps=13 format=2]

[ext_resource path="res://Balsamiq_Sans/BalsamiqSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Common/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://Common/HUD/carrot_counter_icon.png" type="Texture" id=3]
[ext_resource path="res://Common/HUD/stopwatch_static.png" type="Texture" id=4]
[ext_resource path="res://MenuStyle.tres" type="Theme" id=5]
[ext_resource path="res://Common/HUD/santjarcounter_icon.png" type="Texture" id=6]
[ext_resource path="res://Common/HUD/filljarcounter_icon.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -186.0 ]
}

[node name="CarrotCountLabel" type="Label" parent="."]
margin_left = 1118.0
margin_top = 53.0
margin_right = 1193.0
margin_bottom = 119.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrotSprite" type="Sprite" parent="."]
position = Vector2( 1225, 84 )
texture = ExtResource( 3 )

[node name="TimeLabel" type="Label" parent="."]
margin_left = 112.0
margin_top = 49.0
margin_right = 174.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "60"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerSprite" type="Sprite" parent="."]
position = Vector2( 59, 82 )
texture = ExtResource( 4 )

[node name="Message" type="Label" parent="."]
visible = false
margin_left = 310.0
margin_top = 164.0
margin_right = 1010.0
margin_bottom = 664.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "MESSAGE"
align = 1
valign = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="SanitizedJarLabel" type="Label" parent="."]
margin_left = 1118.0
margin_top = 172.0
margin_right = 1180.0
margin_bottom = 238.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SanitizedJarSprite" type="Sprite" parent="."]
position = Vector2( 1225, 205 )
texture = ExtResource( 6 )

[node name="FilledJarLabel" type="Label" parent="."]
margin_left = 112.0
margin_top = 172.0
margin_right = 174.0
margin_bottom = 238.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilledjarSprite" type="Sprite" parent="."]
position = Vector2( 59, 205 )
texture = ExtResource( 7 )

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
